--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,23 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_lugar">Lugares</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="msg_nombre">Nombre del lugar</string>
+    <string name="msg_correo">Correo (xxxx@abc.com)</string>
+    <string name="msg_telefono">Teléfono (9999-9999)</string>
+    <string name="msg_web">Sitio WEB</string>
+    <string name="bt_agregar">Agregar</string>
+
+
+    <string name="msg_lugar_agregado">Lugar Agregado</string>
+    <string name="msg_faltan_datos">Faltan Datos</string>
+
+
+
 
 </resources>
