--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,12 @@
     <string name="app_name">Lugares</string>
     <string name="tv_correo">Correo</string>
     <string name="tv_clave">Contraseña</string>
+    <string name="msg_correo">Campo para ingresar su correo</string>
+    <string name="msg_clave">Campo para ingresar su contraseña</string>
+    <string name="msg_btLogin">Boton para hacer login al App</string>
+    <string name="msg_btRegister">Boton para registrarse en el App</string>
+    <string name="msg_fallo_registro">Falló el registro del usuario</string>
+    <string name="msg_fallo_login">Falló el login del usuario</string>
     <string name="title_activity_principal">Principal</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -16,31 +22,20 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <string name="msg_nombre">Nombre del lugar</string>
-    <string name="msg_correo">Correo (xxxx@abc.com)</string>
-    <string name="msg_imagen">Imagen del lugar</string>
-    <string name="msg_telefono">Teléfono (9999-9999)</string>
-    <string name="msg_web">Sitio WEB</string>
-    <string name="bt_agregar">Agregar</string>
-    <string name="bt_actualizar">Actualizar</string>
+    <string name="msg_nombre_add">Nombre del lugar</string>
+    <string name="msg_correo_add">Correo del lugar</string>
+    <string name="msg_telefono_add">Teléfono del lugar</string>
+    <string name="msg_web_add">Sitio WEB del lugar</string>
+    <string name="msg_lugar_add">Lugar agregado</string>
+    <string name="msg_lugar_update">Lugar actualizado</string>
+    <string name="msg_lugar_delete">Lugar eliminado</string>
 
-    <string name="msg_lugar_agregado">Lugar Agregado</string>
-    <string name="msg_faltan_datos">Faltan Datos</string>
-    <string name="msg_lugar_modificado">Lugar actualizado</string>
+    <string name="bt_add_lugar">Agregar Lugar</string>
+    <string name="bt_update_lugar">Actualizar Lugar</string>
+    <string name="menu_delete">Eliminar Lugar</string>
+    <string name="msg_seguroBorrar">"¿Está seguro de eliminar "</string>
+    <string name="no">No</string>
+    <string name="si">Si</string>
+
+
 </resources>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
